JS Cycle: for To: fix row41, add colorClass in the last else scenario

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <h1 class="text-center mt-4">FizzBuzz DOM</h1>
+    <h1 class="text-center mt-4 text-white">FizzBuzz DOM</h1>
     <div class="container mt-4">
     </div>
 
